--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,19 @@ h2{
 .aboutus{
     text-align: center;
 }
+.menu h3{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bolder;
+    margin-top: 50px;
+}
+.row{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-right:100px;
+    margin-left: 100px;
+}
+.menu img{
+    display:block;
+}
