--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ h1{
     font-family: 'Gochi Hand', cursive;
     color: black;
 }
-nav ul{
+.nav ul{
     list-style-type: none;
     margin: 0;
   padding: 0;
@@ -13,11 +13,11 @@ li{
 li a{
     display: inline;
     color: blue;
-    padding: 15px 20px;
+    padding: 10px 20px;
 }
 .navi{
     border: 2px 2px transparent;
-    box-shadow: 2px 2px 5px coral;
+    box-shadow: 3px 3px 5px coral;
 }
 #home{
     background-image:url("https://bit.ly/2EfwdOk") ;
@@ -29,7 +29,7 @@ h2{
     padding-top:30px;
     text-align: center;
     color: blanchedalmond;
-    text-shadow:3px 3px 5px brown;
+    text-shadow:2px 2px 5px brown;
     font-size: 80px;
 }
 .aboutus{
@@ -42,28 +42,189 @@ h2{
     font-weight: bolder;
     margin-top: 50px;
 }
-.menu .row{
-    display:flex;
-    justify-content: space-around;
-    margin-right:100px;
-    margin-left: 100px;
-}
-.menu img{
-    display:block;
-}
-.menu p{
-    text-align: center;
-    display: none;
-    position: absolute;
-    font-size: 40px;
-    padding-top: 80px;
-    padding-left:40px;
-}
 #order-pizza {
     color: #000;
 }
 
 #list li {
     font-size: 24px;
-    font-family: system-ui, serif;
+    font-family: 'Gochi Hand', cursive;
 }
+.order-summary h1, .summary, .contact {
+    color: #000;
+    font-family: 'Gochi Hand', cursive;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.contacts {
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-overlay {
+    height: inherit;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+input[type="email"] {
+    background: transparent;
+    border: 1px solid #ffffff;
+    padding: .8em .7em;
+    border-radius: 20px;
+    outline: none !important;
+    font-size: 14px;
+}
+
+.click-me {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.get-pizza {
+    margin-top: 40px;
+}
+
+.contact {
+    padding-top: 20px;
+}
+
+.cdata {
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+.data {
+    height: inherit;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
+
+.go {
+    border-radius: 20px;
+}
+
+.click-me, button[type=submit], .deliver, .delivernot {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    letter-spacing: 2px;
+    background-color: #ffbf00;
+    outline: none;
+    padding: 12.5px 13px;
+    border: none;
+    border-radius: 33px;
+    font-size: 14px;
+}
+
+.deliver, .delivernot {
+    margin: 10px;
+}
+#order-pizza {
+    padding: 20px 50px 20px 50px;
+    font-family: 'Gushi Hand', cursive;
+}
+
+.order-overlay {
+    height: inherit;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+    border-radius: 20px;
+}
+
+.checkout {
+    border-radius: 20px;
+    margin-top: 20px;
+}
+
+#list {
+    color: #000;
+}
+
+.pizz {
+    color: blue;
+}
+
+/* Collapse nav start*/
+.top-nav-collapse {
+    background-color: #3f51b5 !important;
+}
+
+.navbar:not(.top-nav-collapse) {
+    background: transparent !important;
+}
+
+/* Collapse nav end*/
+
+
+/** Media Queries start **/
+
+@media (max-width: 740px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 1000px;
+        overflow-x: hidden;
+    }
+
+    #push {
+        padding-top: 40%;
+    }
+
+    .karibu-txt {
+        margin-top: 50px;
+    }
+
+    .menu-overlay {
+        width: 100%;
+        height: inherit;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .karibu-img {
+        margin-left: 20px;
+        margin-bottom: 10px;
+        height: 300px;
+        width: 270px;
+    }
+
+    .welcome {
+        padding-top: 10px;
+    }
+
+    .cdata {
+        padding: 10px 5px 10px 5px;
+    }
+
+}
+
+@media (min-width: 800px) and (max-width: 850px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 650px;
+    }
+
+    .piz-pap {
+        font-size: 50px;
+    }
+
+    ul > .nav-items {
+        display: inline;
+        margin-right: 20px;
+        margin-left: 12px;
+    }
+}
+
+@media (max-width: 991px) {
+    .navbar:not(.top-nav-collapse) {
+        background: #3f51b5 !important;
+    }
+
+}
+
+    
+
