add changes on order summary

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,16 +48,15 @@ h2{
 
 #list li {
     font-size: 24px;
-    font-family: 'Gochi Hand', cursive;
+
 }
-.order-summary h1, .summary, .contact {
-    color: #000;
-    font-family: 'Gochi Hand', cursive;
+.order-summary h3 {
+    color:brown;
     margin-top: 30px;
     text-align: center;
 }
 
-.contacts {
+.contact {
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -72,7 +71,6 @@ input[type="email"] {
     border: 1px solid #ffffff;
     padding: .8em .7em;
     border-radius: 20px;
-    outline: none !important;
     font-size: 14px;
 }
 
@@ -110,7 +108,7 @@ input[type="email"] {
     text-transform: uppercase;
     display: inline-block;
     letter-spacing: 2px;
-    background-color: #ffbf00;
+    background-color: blue;
     outline: none;
     padding: 12.5px 13px;
     border: none;
@@ -146,85 +144,7 @@ input[type="email"] {
     color: blue;
 }
 
-/* Collapse nav start*/
-.top-nav-collapse {
-    background-color: #3f51b5 !important;
-}
 
-.navbar:not(.top-nav-collapse) {
-    background: transparent !important;
-}
-
-/* Collapse nav end*/
-
-
-/** Media Queries start **/
-
-@media (max-width: 740px) {
-    html,
-    body,
-    header,
-    .view {
-        height: 1000px;
-        overflow-x: hidden;
-    }
-
-    #push {
-        padding-top: 40%;
-    }
-
-    .karibu-txt {
-        margin-top: 50px;
-    }
-
-    .menu-overlay {
-        width: 100%;
-        height: inherit;
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-
-    .karibu-img {
-        margin-left: 20px;
-        margin-bottom: 10px;
-        height: 300px;
-        width: 270px;
-    }
-
-    .welcome {
-        padding-top: 10px;
-    }
-
-    .cdata {
-        padding: 10px 5px 10px 5px;
-    }
-
-}
-
-@media (min-width: 800px) and (max-width: 850px) {
-    html,
-    body,
-    header,
-    .view {
-        height: 650px;
-    }
-
-    .piz-pap {
-        font-size: 50px;
-    }
-
-    ul > .nav-items {
-        display: inline;
-        margin-right: 20px;
-        margin-left: 12px;
-    }
-}
-
-@media (max-width: 991px) {
-    .navbar:not(.top-nav-collapse) {
-        background: #3f51b5 !important;
-    }
-
-}
 
     
 
