--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ h2{
     font-size: 24px;
 
 }
-.order-summary h3 {
+.order-summary h3, .summary {
     color:brown;
     margin-top: 30px;
     text-align: center;
