--- a/css/styles.css
+++ b/css/styles.css
@@ -111,10 +111,20 @@ h4{
 .pizz {
     color: blue;
 }
-h5{
-   color: teal;
-}
-
-
-    
-
+/** Media Queries start **/
+@media (max-width: 740px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 1000px;
+        overflow-x: hidden;
+    }
+    @media (min-width: 800px) and (max-width: 850px) {
+        html,
+        body,
+        header,
+        .view {
+            height: 650px;
+        }
+/* Media Queries end*/
